--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goit-react-hw-04-hooks-phonebook",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Yulia2021-dev/goit-react-hw-04-hooks-phonebook",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
